Add concise and detailed logs for missing or inconsistent voltage levels limits. (#68)
* Add synthetic and detailed logs for inconsistent voltage levels limits (limit < 0 and low limit > high limit)
* Modifications after code review.
* Fix Sonar issues

---------

Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>